syntax = "proto3";

option csharp_namespace = "EmployeeServiceProto";

package EmployeeServiceProto;

service EmployeeTypeService{

	rpc CreateEmployeeType (CreateEmployeeTypeRequest) returns (CreateEmployeeTypeResponse);
	rpc GetAllEmployeeTypes (GetAllEmployeeTypesRequest) returns (GetAllEmployeeTypesResponse);
	rpc DeleteEmployeeType (DeleteEmployeeTypeRequest) returns  (DeleteEmployeeTypeResponse);

}

message CreateEmployeeTypeRequest{
	string description = 1;
}

message CreateEmployeeTypeResponse{
	int32 id = 1;
}

message GetAllEmployeeTypesRequest{

}

message GetAllEmployeeTypesResponse{
	repeated EmployeeType employeeTypes = 1;
}

message DeleteEmployeeTypeRequest{
	int32 id = 1;
}

message DeleteEmployeeTypeResponse{

}

message EmployeeType{
	int32 id = 1;
	string description = 2;
}

